[package]
name = "bagel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
serde_json = "1.0.66"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] } 
rand = "0.8.4"
